// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFilterButton does not render a badge or count if numFilters is not passed 1`] = `
<div
  class="euiFilterButton__wrapper css-3lvy62-wrapper"
>
  <button
    aria-label="aria-label"
    class="euiButtonEmpty euiFilterButton testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props badgeColor renders 1`] = `
<div
  class="euiFilterButton__wrapper css-3lvy62-wrapper"
>
  <button
    class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props grow can be turned off 1`] = `
<div
  class="euiFilterButton__wrapper css-uqyyr7-wrapper-noGrow"
>
  <button
    class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default-noGrow"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props iconType and iconSide renders 1`] = `
<div
  class="euiFilterButton__wrapper css-3lvy62-wrapper"
>
  <button
    class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content-hasIcon"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
      <span
        color="inherit"
        data-euiicon-type="user"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props isDisabled renders 1`] = `
<div
  class="euiFilterButton__wrapper css-3lvy62-wrapper"
>
  <button
    class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled-euiFilterButton-default"
    disabled=""
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props isSelected renders 1`] = `
<div
  class="euiFilterButton__wrapper css-3lvy62-wrapper"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-isSelected emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props numActiveFilters and hasActiveFilters renders 1`] = `
<div
  class="euiFilterButton__wrapper css-3lvy62-wrapper"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-hasActiveFilters-default"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text euiFilterButton__text-hasNotification emotion-euiFilterButton__text-hasNotification"
      />
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="5 active filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-accent-euiFilterButton__notification-badgeContent"
          role="marquee"
        >
          5
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props numFilters renders 1`] = `
<div
  class="euiFilterButton__wrapper css-128of3o-wrapper-hasNotification"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-hasNotification emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text euiFilterButton__text-hasNotification emotion-euiFilterButton__text-hasNotification"
      />
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="5 available filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-subdued-euiFilterButton__notification-badgeContent"
          role="marquee"
        >
          5
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props type renders 1`] = `
<div
  class="euiFilterButton__wrapper css-3lvy62-wrapper"
>
  <button
    class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props withNext renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1t3lqht-wrapper-withNext"
>
  <button
    class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton renders 1`] = `
<div
  class="euiFilterButton__wrapper css-3lvy62-wrapper"
>
  <button
    aria-label="aria-label"
    class="euiButtonEmpty euiFilterButton testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton renders zero properly 1`] = `
<div
  class="euiFilterButton__wrapper css-128of3o-wrapper-hasNotification"
>
  <button
    aria-label="aria-label"
    class="euiButtonEmpty euiFilterButton euiFilterButton-hasNotification testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text euiFilterButton__text-hasNotification emotion-euiFilterButton__text-hasNotification"
      />
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="0 available filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-subdued-euiFilterButton__notification-badgeContent"
          role="marquee"
        >
          0
        </span>
      </span>
    </span>
  </button>
</div>
`;
